--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="24dp">
+    android:layout_margin="24dp"
+    android:orientation="vertical">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/sample_image"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/sample_image"
+        android:src="@drawable/sample" />
     <com.google.android.material.slider.Slider
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/res_slider"
         android:valueFrom="25"
         android:valueTo="100"
-        android:stepSize="5"
+        android:stepSize="1"
         android:value="100" />
-</RelativeLayout>
+</LinearLayout>
