--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,5 +3,10 @@
     <style name="CheckBox.NoMargin" parent="Widget.AppCompat.CompoundButton.CheckBox">
         <item name="android:minWidth">0dp</item>
         <item name="android:minHeight">0dp</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
+    <style name="ProgressBar.Horizontal.Small" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:layout_marginHorizontal">64dp</item>
     </style>
 </resources>
