Fix style needing API 26
Signed-off-by: tytydraco <tylernij@gmail.com>

--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -43,6 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="64dp"
-            style="@style/ProgressBar.Horizontal.Small" />
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
     </LinearLayout>
 </RelativeLayout>
