--- a/app/src/main/res/layout/activity_resolution.xml
+++ b/app/src/main/res/layout/activity_resolution.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="24dp"
     android:orientation="vertical">
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/settings"
+        android:contentDescription="@string/settings"
+        android:src="@drawable/ic_baseline_settings_24"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:background="@null" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="24dp"
+        android:orientation="vertical"
+        android:id="@+id/text_body">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,9 +35,11 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:id="@+id/sample_image"
-        android:layout_weight="1"
+        android:layout_marginHorizontal="24dp"
+        android:layout_above="@id/res_slider"
+        android:layout_below="@id/text_body"
         android:scaleType="centerCrop"
         android:contentDescription="@string/sample_image"
         android:src="@drawable/sample" />
@@ -33,8 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/res_slider"
+        android:layout_alignParentBottom="true"
         android:valueFrom="25"
         android:valueTo="100"
         android:stepSize="5"
         android:value="100" />
-</LinearLayout>
+</RelativeLayout>
