--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/settings">
-
+        <Preference
+            android:title="@string/pref_reset_resolution_title"
+            android:summary="@string/pref_reset_resolution_summary"
+            android:key="@string/pref_reset_resolution_key"
+            android:icon="@drawable/ic_baseline_clear_24" />
+        <Preference
+            android:title="@string/pref_custom_resolution_title"
+            android:summary="@string/pref_custom_resolution_summary"
+            android:key="@string/pref_custom_resolution_key"
+            android:icon="@drawable/ic_baseline_edit_24" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/about">
         <Preference
