--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -42,6 +42,7 @@
         <ProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:indeterminate="true"
             android:layout_marginHorizontal="64dp"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
     </LinearLayout>
