--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -51,7 +51,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="32dp"
+                android:layout_marginTop="32dp"
                 style="@style/TextAppearance.MaterialComponents.Headline5"
                 android:text="@string/verify_message" />
         </LinearLayout>
