--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="24dp">
+    android:layout_height="match_parent">
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/learn_more"
+        android:contentDescription="@string/settings"
+        android:src="@drawable/ic_baseline_help_24"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:background="@null" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
@@ -18,7 +28,6 @@
             android:layout_marginTop="32dp"
             style="@style/TextAppearance.MaterialComponents.Headline5"
             android:text="@string/permission_message" />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,6 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_alignParentBottom="true">
