--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -35,47 +35,43 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="24dp">
-        <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:orientation="vertical">
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/TextAppearance.MaterialComponents.Headline2"
-                android:text="@string/verify_title" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                style="@style/TextAppearance.MaterialComponents.Headline5"
-                android:text="@string/verify_message" />
-        </LinearLayout>
-
-        <LinearLayout
+            style="@style/TextAppearance.MaterialComponents.Headline2"
+            android:text="@string/verify_title" />
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_alignParentBottom="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="12dp"
-                style="@style/TextAppearance.MaterialComponents.Caption"
-                android:text="@string/check_all_boxes" />
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="64dp"
-                android:max="10000"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:id="@+id/progress" />
-        </LinearLayout>
-    </RelativeLayout>
+            android:layout_marginTop="32dp"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
+            android:text="@string/verify_message" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_alignParentBottom="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp"
+            style="@style/TextAppearance.MaterialComponents.Caption"
+            android:text="@string/check_all_boxes" />
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="64dp"
+            android:max="10000"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:id="@+id/progress" />
+    </LinearLayout>
 </RelativeLayout>
