--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources>
     <style name="Theme.SATED" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@android:color/black</item>
-        <item name="colorSecondary">@android:color/black</item>
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorSecondary">@android:color/white</item>
 
         <item name="android:statusBarColor">?colorSurface</item>
         <item name="android:navigationBarColor">?colorSurface</item>
