Properly name theme
Signed-off-by: Tyler Nijmeh <tylernij@gmail.com>

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.SATED" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Purr" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorSecondary">@android:color/white</item>
 
