--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,17 @@
         <item name="android:minHeight">0dp</item>
         <item name="android:layout_margin">5dp</item>
     </style>
+
+    <style name="Saved">
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+    </style>
+
+    <style name="SavedCardView" parent="Widget.Material3.CardView.Elevated">
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
 </resources>
